--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ulimit
-Title: What the package does (short line)
-Version: 0.1
-Authors@R: "First Last <first.last@example.com> [aut, cre]"
-Description: What the package does (paragraph)
+Title: Enforce memory limits on POSIX systems
+Version: 0.0-1
+Authors@R: "Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]"
+Description: Implements memory.size() and memory.limit() for POSIX systems.
 Depends: R (>= 3.1.0)
-License: What license is it under?
+License: GPL-v3
 LazyData: true
