--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Title: Enforce memory limits on POSIX systems
 Version: 0.0-1
 Authors@R: "Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]"
 Description: Implements memory.size() and memory.limit() for POSIX systems.
-Depends: R (>= 3.1.0)
+Depends:
+    R (>= 3.1.0)
 License: GPL-v3
 LazyData: true
