--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Enforce memory limits on POSIX systems
 Version: 0.0-2
 Date: 2014-06-29
 Authors@R: "Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]"
-Description: Implements memory.size() and memory.limit() for POSIX systems.
+Description: Provides a way to enforce memory limits for a running R process on
+    POSIX systems.
 Depends:
     R (>= 3.1.0)
 License: GPL-3
