--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Date: 2014-06-29
 Authors@R: "Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]"
 Description: Provides a way to enforce memory limits for a running R process on
     POSIX systems.
-Depends:
+Depends: 
     R (>= 3.1.0)
 License: GPL-3
 LazyData: true
+Suggests: testthat
