--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Package: ulimit
 Title: Enforce memory limits on POSIX systems
 Version: 0.0-2
 Date: 2014-06-29
-Authors@R: "Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]"
+Authors@R: as.person("Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]")
 Description: Provides a way to enforce memory limits for a running R process on
     POSIX systems.
 Depends: 
