--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,6 @@ Depends:
     R (>= 3.1.0)
 License: GPL-3
 LazyData: true
-Suggests: testthat
+Suggests: testthat,
+    knitr
+VignetteBuilder: knitr
