--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Encoding: UTF-8
 Package: ulimit
-Title: Enforce memory limits on POSIX systems
+Title: Enforce Memory Limits on POSIX Systems
 Version: 0.0-2
 Date: 2014-06-29
 Authors@R: as.person("Kirill Müller <krlmlr+r@mailbox.org> [aut, cre]")
